# app/Models/User.php
@@ -22,6 +22,7 @@ class User extends Authenticatable
         'email',
         'password',
         'head_coach_id',
+        'league_id',
         'sport_id',
         'is_subscribe',
         'role',
@@ -39,6 +40,11 @@ class User extends Authenticatable
     {
         return $this->hasMany(User::class, 'head_coach_id')->where('role', 'assistant_coach');
       
+    }
+
+    public function league()
+    {
+        return $this->belongsTo(League::class);
     }
     /**
      * The attributes that should be hidden for serialization.
