# routes/channels.php
@@ -29,17 +29,11 @@ Broadcast::channel('user.{userId}.practice.{gameId}', function ($user, $userId, 
     return false;
 });
 
-Broadcast::channel('headcoach.{headCoachId}.qb', function ($user, $headCoachId) {
-
-     return true;
-   // return $user->role === 'head_coach' ;
-
+Broadcast::channel('headcoach.{headCoachId}.league.{leagueId}.qb', function ($user, $headCoachId, $leagueId) {
+    return true;
 });
-Broadcast::channel('headcoach.{headCoachId}.play', function ($user, $headCoachId) {
-
-     return true;
-   // return $user->role === 'head_coach' ;
-
+Broadcast::channel('headcoach.{headCoachId}.league.{leagueId}.play', function ($user, $headCoachId, $leagueId) {
+    return true;
 });
 
 Broadcast::channel('headcoach.{userId}', function ($user, $userId) {
@@ -51,9 +45,8 @@ Broadcast::channel('qb-user', function ($user) {
 Broadcast::channel('mobile.{mobileUserId}', function ($user, $mobileUserId) {
     return (int)$user->id === (int)$mobileUserId;
 });
-Broadcast::channel('coach-group.{headCoachId}', function ($user, $headCoachId) {
+Broadcast::channel('coach-group.{headCoachId}.league.{leagueId}', function ($user, $headCoachId, $leagueId) {
     return true;
-
 });
 
 
